# DigitalArticle

./: .dockerignore  .gitattributes  .gitignore  2025-11-09-chat-da.txt  CHANGELOG.md  CONTRIBUTING.md  DOCKER-QUICKSTART.md  Dockerfile  FIX_DICT_SERIALIZATION_AND_LISTS_2025-11-18.md  FIX_IMPORT_SHADOWING_2025-11-18.md  FIX_NAN_JSON_SERIALIZATION_2025-11-18.md  FIX_PANDAS_KEYERROR_RETRY_FAILURES_2025-11-18.md  FIX_SERIES_AND_CATEGORIZATION_2025-11-18.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  TODO.md  VARIABLE_CATEGORIZATION_2025-11-18.md  config.json  config.json.example  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  start.sh  start_backend.py  start_backend.sh  start_frontend.js  start_frontend.sh  test-final-working-check.js  test-see-actual-error.js  test-show-real-errors.js  test-trigger-500-and-log.js  test_error_consolidation.py  test_examples.md
.claude/: CLAUDE.md
assets/: README.md  semantic-models.md
backend/: .dockerignore  2025-12-07-logital-retry.txt  2025-12-07-prompts.txt  pyproject.toml  requirements.txt
backend/app/: __init__.py  _version.py  config.py  main.py
backend/app/api/: __init__.py  ai_code_fix.py  cells.py  chat.py  files.py  help.py  llm.py  models.py  notebooks.py  personas.py  review.py  settings.py  system.py  traces.py
backend/app/models/: __init__.py  analysis_critique.py  analysis_plan.py  autofix.py  linting.py  notebook.py  persona.py  review.py  semantics.py  trace.py  validation.py
backend/app/services/: __init__.py  analysis_critic.py  analysis_planner.py  autofix_service.py  chat_service.py  data_manager.py  data_manager_clean.py  data_manager_fixed.py  error_analyzer.py  execution_insights_extractor.py  execution_phase_tracker.py  execution_service.py  file_context_preview.py  file_types.py  h5_service.py  help_service.py  linting_service.py  llm_profile_extractor.py  llm_semantic_extractor.py  llm_service.py  llm_validation_service.py  logic_correction_context_builder.py  logic_issue_selection.py  logic_validation_service.py  notebook_asset_numbering_service.py  notebook_service.py  pdf_markdown_renderer.py  pdf_service.py  pdf_service_advanced.py  pdf_service_scientific.py  persona_service.py  review_service.py  scientific_analysis_service.py  semantic_analysis_service.py  semantic_profile_service.py  semantic_service.py  shared.py  state_persistence_service.py  token_tracker.py  trace_store.py  (+3 more)
backend/app/services/validators/: __init__.py  yaml_loader.py
backend/backend/notebook_workspace/data/2fa6de54-9b0e-4d85-b565-2a46f1dbc0ed/: gene_expression.csv  sales_data.csv
backend/docs/devnotes/: cell-reuse-prior-information.md  duplicate-figure-fix.md  pdf-plotly-figures-fix.md  silent-save-failure-fix.md
backend/notebook_workspace/: data_registry.json
backend/notebook_workspace/243186b2-4fc7-47ff-b989-5746b0bffdda/data/: chat_history_Select_model____2025-07-05T10-35-41-558Z.json  chat_history_gemma_3_4b_pt_8bit__5_3GB__2025-06-28T14-26-11-930Z.json
backend/notebook_workspace/3b236020-8650-4838-b899-4f0bd3a62232/data/: invalid.json  project_config.json  sample.json  test_upload.json
backend/notebook_workspace/4dbfeca8-0ed1-45d8-bdbf-800f36845abe/data/: customer_demographics.csv  patient_data.csv
backend/notebook_workspace/6fce4be2-48b4-4d50-bb16-23856758849e/data/: numbers.csv
backend/notebook_workspace/84c10be6-3246-4fc5-b18f-d02ae36816cd/data/: chat_history_gemma_3_1b_it_bf16_lr3e_06_bs8_2025-06-29T23-47-12-198Z.json
backend/notebook_workspace/dae05c6c-ae4a-4bdd-96c6-cb33bc6cd028/data/: chat_history_gemma_3_12b_it_bf16_lr6e_06_bs_2025-06-30T14-54-39-786Z.json
backend/tests/context_continuity/: test_cell_context_continuity.py  test_variable_display.py
backend/tests/scipy_trapz/: test_trapz_deprecation_fix.py
backend/tests/token_tracker/: test_token_tracker.py
backend/tests/validation/: test_antipattern_false_positives.py
data/: README.md
data/validators/: default.yaml
digital_article_cli/: frontend.py
digitalarticle/: _version.py  backend.py
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.unified  README-unified-image.md  README.md  entrypoint-unified.sh  entrypoint.sh  init-ollama.sh  nginx-unified.conf  ollama-entrypoint.sh  readme-multi-container.md  supervisord.conf
docker/2-tiers/: Dockerfile  README.md  entrypoint.sh  nginx.conf  supervisord.conf
docker/3-tiers/: Dockerfile.backend  Dockerfile.frontend  README.md  entrypoint.backend.sh  entrypoint.ollama.sh  nginx.conf
docker/monolithic/: Dockerfile  Dockerfile.apple  Dockerfile.cpu  Dockerfile.nvidia  README.md  entrypoint.sh  supervisord.conf
docs/: DOCKER-DEPLOYMENT.md  ERROR_HANDLING_ARCHITECTURE.md  additional-fixes.md  aggregate-profile-portfolio.md  architecture.md  custom-validators.md  data_flow.md  docker-containerization.md  error-enhancement-system.md  error-handling.md  export.md  fix-retry-context.md  getting-started.md  improve-reasoning.md  knowledge_base.md  limitations.md  overview.md  persona-and-review-architecture.md  persona-ms-scenarios.md  persona_sota_evaluation.md  philosophy.md  reverse-analysis-notebook.plan.md  semantic_models.md  troubleshooting.md  variable-state-persistence.md
docs/adr/: 0001-article-first-mixed-audience.md  0002-ab-testing-ladder.md  0003-truncation-compaction.md  0004-recursive-self-correction-loop.md  0005-perfect-observability.md  0006-publish-immutable-releases-doi-lineage.md  0008-linting-and-quality-gates.md  (+3 more)
examples/: README.md
frontend/: .dockerignore  .eslintrc.cjs  2025-11-18-imports.txt  2025-12-02-solve-figure.txt  check_after_fix.cjs  check_figure_structure.cjs  check_interactive_plot.cjs  check_interactive_section.cjs  detailed_html_check.cjs  index.html  package-lock.json  package.json  verify_no_duplicates.cjs  vite.config.ts
tests/: conftest.py  test_logic_correction_defaults.py  test_openai_compatible_integration.py  test_version_cohesion.py
tools/: validate_markdown_links.py
user_docs/: files_and_data.md  help_and_support.md  how_it_works.md  how_to_use.md  overview.md  troubleshooting.md
(+215 files in other folders)
