[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-article-backend"
version = "0.1.0"
description = "Backend API for Digital Article - computational notebooks with natural language"
authors = [
    {name = "Digital Article Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Backend
    "fastapi==0.119.1",
    "uvicorn==0.38.0",
    "pydantic==2.12.3",
    "requests==2.32.5",
    "python-multipart==0.0.9",  # Required for file uploads

    # LLM Integration
    "abstractcore==2.5.2",

    # Data Processing
    "pandas==2.3.3",
    "numpy==1.26.4",
    "openpyxl==3.1.5",
    "h5py==3.15.1",

    # Visualization
    "matplotlib==3.10.7",
    "plotly==6.3.1",
    "seaborn==0.13.2",

    # Scientific Computing
    "scipy==1.16.2",
    "scikit-learn==1.7.2",
    "umap-learn==0.5.9.post2",
    "scanpy==1.11.5",

    # Document Generation
    "reportlab==4.4.4",
    "pillow==11.3.0",
    "markdown==3.9",
]

[project.optional-dependencies]
analysis = [
    "dash",
    "statsmodels",
    "networkx",
]

[tool.setuptools]
packages = ["app"]
