[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-article-backend"
# Note: Keep in sync with /digitalarticle/_version.py
version = "0.3.1"
description = "Backend API for Digital Article - computational notebooks with natural language"
authors = [
    {name = "Digital Article Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Backend
    "fastapi==0.119.1",
    "uvicorn==0.38.0",
    "pydantic==2.12.3",
    "requests==2.32.5",
    "python-multipart==0.0.9",  # Required for file uploads

    # LLM Integration - all providers except MLX (Apple Silicon only)
    # Includes: openai, anthropic, ollama, lmstudio, huggingface, embeddings
    # Note: HuggingFace includes torch (~2GB), image will be larger
    "abstractcore[all-providers-non-mlx]>=2.6.2",  # Requires 2.6.0+ for download_model API and 2.6.2 for base url

    # Data Processing
    "pandas==2.3.3",
    "numpy==1.26.4",
    "openpyxl==3.1.5",
    "h5py==3.15.1",

    # Visualization
    "matplotlib==3.10.7",
    "plotly==6.3.1",
    "seaborn==0.13.2",

    # Scientific Computing
    "scipy==1.16.2",
    "scikit-learn==1.7.2",
    "umap-learn==0.5.9.post2",
    "scanpy==1.11.5",

    # Modeling & Simulation (PK/PD)
    "lmfit>=1.3.0",      # Non-linear curve fitting for PK parameter estimation
    "tellurium>=2.2.0",  # QSP/SBML modeling with Antimony

    # Document Generation
    "reportlab==4.4.4",
    "pillow==11.3.0",
    "markdown==3.9",
    "kaleido==0.2.1",  # For Plotly → PNG conversion in PDF export
]

[project.optional-dependencies]
analysis = [
    "dash",
    "statsmodels",
    "networkx",
]

[tool.setuptools]
packages = ["app"]
