[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-article-backend"
# Single source of truth:
# - `digitalarticle/_version.py` for the repo
# - this backend package derives its version dynamically via `backend/app/_version.py`
dynamic = ["version"]
description = "Backend API for Digital Article - computational notebooks with natural language"
license = {text = "MIT"}
authors = [
    {name = "Digital Article Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Backend
    "fastapi==0.119.1",
    "uvicorn==0.38.0",
    "pydantic==2.12.3",
    "requests==2.32.5",
    "python-multipart>=0.0.9",  # Required for file uploads
    "pyyaml>=6.0",  # YAML file parsing

    # LLM Integration (providers; intentionally excludes AbstractCore "embeddings" extra)
    #
    # Rationale:
    # - Tellurium's SBML/QSP stack (libRoadRunner) requires NumPy ~= 2.2 on cp312.
    # - AbstractCore's "embeddings" extra currently pins NumPy < 2.0, which makes `backend[modeling]`
    #   unsatisfiable and triggers pip resolver backtracking explosions.
    #
    # Note: HuggingFace includes torch (~2GB), image will be larger.
    "abstractcore[anthropic,huggingface,lmstudio,ollama,openai]>=2.6.9",  # Requires 2.6.0+ for download_model API, 2.6.2 for base url, 2.6.9 for async trace fix

    # Data Processing
    "pandas==2.3.3",
    # NOTE: Tellurium's SBML/QSP stack (libRoadRunner) requires NumPy ~= 2.2 on cp312 builds.
    # Pinning here keeps `backend[modeling]` installable and avoids pip resolver backtracking explosions.
    "numpy==2.2.0",
    "openpyxl==3.1.5",
    "h5py==3.15.1",

    # Visualization
    "matplotlib==3.10.7",
    "plotly==6.3.1",
    "seaborn==0.13.2",

    # Scientific Computing
    "scipy==1.16.2",
    "scikit-learn==1.7.2",
    "umap-learn==0.5.9.post2",
    "scanpy==1.11.5",

    # Modeling & Simulation (PK/PD)
    "lmfit>=1.3.0",      # Non-linear curve fitting for PK parameter estimation
    "lifelines>=0.28.0", # Survival analysis (Kaplan-Meier curves)

    # Clinical Data Analysis
    "tableone>=0.8.0",   # Baseline characteristics tables

    # Document Generation
    "reportlab==4.4.4",
    "pillow==11.3.0",
    "markdown==3.9",
    "kaleido==0.2.1",  # For Plotly → PNG conversion in PDF export
]

[project.optional-dependencies]
analysis = [
    "dash",
    "statsmodels",
    "networkx",
]

# Optional: QSP / SBML modeling stack.
#
# Motivation:
# - `tellurium` is heavy and can trigger very deep pip resolver backtracking on some platforms.
# - Most Digital Article workflows do not require SBML/QSP modeling.
# - Keeping it optional makes `pip install -e backend` reliable while preserving the capability.
modeling = [
    "tellurium>=2.2.0",
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.dynamic]
version = {attr = "app._version.__version__"}
